New docs with header/footer

--- a/docs/0.1/2.md
+++ b/docs/0.1/2.md
@@ -1,15 +1,15 @@
 <div align="center">
 
-# CALL Documentation
+# (2) CALL Documentation: Stack
 CALL 0.1 essential release
 | [Main page](../README.md) | [Table of contents](./README.md)
 
-</div>
-
-**WARNING**: This release is **not** a final release and you shouldn't use it!
+This release is **not** a final release and you shouldn't use it!
 it's just for developement/testing purposes
 
-## Stack
+</div>
+<hr>
+
 In CALL we have 2 stacks:
  - **Master stack**, the stack used by the interpreter and by STDLIB for basic
    operations
@@ -34,3 +34,11 @@ You can `push` and `pop` to the master stack with these instructions:
     mpop @mark
     mpop @flex
 ```
+
+<hr>
+<div align="center">
+
+CALL 0.1 essential release<BR>
+| [Previous](./1.md) | [Next](./3.md) |
+
+</div>
