--- a/docs/0.1/3.md
+++ b/docs/0.1/3.md
@@ -1,6 +1,6 @@
 <div align="center">
 
-# (1) CALL 0.1 Docs: Syntax rules
+# (3) CALL 0.1 Docs: Expressions
 
 | [Main page](../README.md) | [Table of contents](./README.md) |
 
@@ -35,7 +35,7 @@ Main:
 ```
 since CALL is a more modern version of assembly you can do this:
 ```asm
-lbl    Main
+lbl Main
     set    @a, 1
     doiffh [@a == 1] jmp ax_is_1 ; if @a == 1 then jump to ax_is_1
 
@@ -48,6 +48,6 @@ loclbl ax_is_1
 <div align="center">
 
 CALL 0.1 essential release<BR>
-| [Next](../README.md) | [Previous](./README.md) |
+| [Previous](./2.md) | [Next](./2.md) |
 
 </div>
