--- a/docs/0.1/4.md
+++ b/docs/0.1/4.md
@@ -1,15 +1,16 @@
 <div align="center">
 
-# CALL Documentation
+# (4) CALL Documentation: Labels
 CALL 0.1 essential release
 | [Main page](../README.md) | [Table of contents](./README.md)
 
-</div>
-
-**WARNING**: This release is **not** a final release and you shouldn't use it!
+This release is **not** a final release and you shouldn't use it!
 it's just for developement/testing purposes
 
-In the example with [expressions](./exprs.md) uses labels:
+</div>
+<hr>
+
+In the example with [expressions](./3.md) uses labels:
 ```asm
 lbl    Main
     set    @a, 1
@@ -74,3 +75,11 @@ loclbl my_label ; invalid! orphaned child label
 
 locjmp my_label ; invalid! orphaned child label
 ```
+
+<hr>
+<div align="center">
+
+CALL 0.1 essential release<BR>
+| [Previous](./3.md) | [Next](./5.md) |
+
+</div>
