--- a/docs/0.1/1.md
+++ b/docs/0.1/1.md
@@ -1,15 +1,15 @@
 <div align="center">
 
-# CALL Documentation
+# (1) CALL Documentation: Syntax
 CALL 0.1 essential release
 | [Main page](../README.md) | [Table of contents](./README.md)
 
-</div>
-
-**WARNING**: This release is **not** a final release and you shouldn't use it!
+This release is **not** a final release and you shouldn't use it!
 it's just for developement/testing purposes
 
-## Syntax
+</div>
+<hr>
+
 The CALL syntax is similar to assembly
 
 ### Comments
@@ -69,3 +69,11 @@ Includes a **library**, (e.g. STanDard LIBrary)
 syntax: `inc [library:KEYWORD]`
 example: `inc STDLIB`, includes STanDard LIBrary
 ```
+
+<hr>
+<div align="center">
+
+CALL 0.1 essential release<BR>
+| [Previous](./README.md) | [Next](./2.md) |
+
+</div>
