--- a/docs/0.1/1.md
+++ b/docs/0.1/1.md
@@ -1,7 +1,8 @@
 <div align="center">
 
 # (1) CALL Documentation: Syntax
-CALL 0.1 essential release
+CALL 0.1 essential release<BR>
+
 | [Main page](../README.md) | [Table of contents](./README.md)
 
 This release is **not** a final release and you shouldn't use it!
