--- a/docs/0.1/4.md
+++ b/docs/0.1/4.md
@@ -3,7 +3,7 @@
 # (4) CALL Documentation: Labels
 CALL 0.1 essential release<BR>
 
-| [Main page](../README.md) | [Table of contents](./README.md)
+| [Main page](../README.md) | [Table of contents](./README.md) |
 
 This release is **not** a final release and you shouldn't use it!
 it's just for developement/testing purposes
