Fixed broken links and fixed non highlighted code

--- a/docs/0.1/1.md
+++ b/docs/0.1/1.md
@@ -35,7 +35,7 @@ set @variable 1 ; this is a Variable
 
 ### Expressions
 Expressions begin with `[` and end with `]`
-```
+```asm
 set @variable [@a + @b]  ; expressions have C-style syntax
 set @variable [@a == @b] ; you can use logics
 set @varibale [@a >> 5]  ; bitwise
