--- a/docs/0.1/1.md
+++ b/docs/0.1/1.md
@@ -1,6 +1,6 @@
 <div align="center">
 
-# (1) CALL Documentation: Syntax
+# (1) CALL Documentation: Installation
 CALL 0.1 essential release<BR>
 
 | [Main page](../README.md) | [Table of contents](./README.md) |
@@ -11,65 +11,39 @@ it's just for developement/testing purposes
 </div>
 <hr>
 
-The CALL syntax is similar to assembly
+## Requirements
+Before installing you need some programs/packages installed:
+ - [Git](https://git-scm.com)
+ - [Python 3](https://python.org)
 
-### Comments
-```asm
-This isn't a comment
-; This is a comment
+## Linux/MacOS
+Linux/MacOS instructions
+ - open your terminal emulator
+ - execute the following commands line by line
+```bash
+# The recommended installation path is ~/call
+git clone https://github.com/evvive/call-language $HOME/call
 ```
 
-### Instructions
-```asm
-[name] [param1] [param2] [param3] [...] [param255]
-instr  50       51       52
+## Windows
+Windows instructions:
+ - open `cmd.exe`
+ - execute the following commands line by line
+```batch
+rem The recommended installation path is %HOME%\call
+git clone https://github.com/evvive/call-language %HOME%\call
 ```
-
-### Variables
-Variables start with the `@` token:
-```asm
-; To define a variable use the set instruction
-; syntax: set [name:VAR] [value:ANY]
-set @variable 1 ; this is a Variable
+to test the call module run
+```batch
+python3 %HOME%\call\src\test.py
 ```
-
-### Expressions
-Expressions begin with `[` and end with `]`
-```asm
-set @variable [@a + @b]  ; expressions have C-style syntax
-set @variable [@a == @b] ; you can use logics
-set @varibale [@a >> 5]  ; bitwise
-
-set @variable [@a == @b && @a == @c || @a == @d]
+if you have this message
+```python
+[...]
+/  __main__ INFO: all test passed!
 ```
+you have installed succesfully `call v0.1`
 
-### Documentation
-To document an instruction the syntax is:
-```asm
-; [instruction name]
-;  [description]
-;
-;  syntax: [instruction name] [param1:type] [param2:type]
-```
-EXAMPLE:
-```asm
-; inc instruction
-;  Includes a library (e.g. STanDard LIBrary)
-;
-;  syntax:  inc [library name:KEYWORD]
-;  example:
-    inc STDLIB ; includes STanDard LIBrary
-```
-
-### Markdown documentation
-To document an instruction with markdown the syntax is
-```markdown
-# `inc` instruction
-Includes a **library**, (e.g. STanDard LIBrary)
-
-syntax: `inc [library:KEYWORD]`
-example: `inc STDLIB`, includes STanDard LIBrary
-```
 
 <hr>
 <div align="center">
